# HomePal

./: CMakeLists.txt
HomePalClient/: CMakeLists.txt
HomePalClient/src/: connectioncontroller.cpp  connectioncontroller.h  guicontroller.cpp  guicontroller.h  main.cpp  roomcontroller.cpp  roomcontroller.h
HomePalClient/src/Connection/: connection.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp
HomePalClient/src/DataClasses/: component.cpp  component.h  room.cpp  room.h
HomePalClient/ui/: images.qrc  main.qml  resources.qrc
HomePalClient/ui/Components/: Style.qml  qmldir
HomePalClient/ui/Items/: CustomButton.qml  InfoBlock.qml
HomePalClient/ui/Popups/: DevicesList.qml  EditParams.qml  EditTime.qml  SelectName.qml
HomePalClient/ui/Views/: Background.qml  MainView.qml  StartWindow.qml
HomePalServer/: CMakeLists.txt  main.cpp
HomePalServer/src/: connectioncontroller.cpp  connectioncontroller.h  guicontroller.cpp  guicontroller.h  processcontroller.cpp  processcontroller.h  roomcontroller.cpp  roomcontroller.h
HomePalServer/src/Connection/: connection.h  tcpserver.cpp  tcpserver.h
HomePalServer/src/DataClasses/: component.cpp  component.h  room.cpp  room.h
HomePalServer/ui/: main.qml
